[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "torchbase"
version = "0.0.0"
authors = [
    { name = "Sohrab Ferdowsi", email = "sohrab.ferdowsi@gmail.com" },
]
description = "A minimalist base for ML projects in PyTorch"
requires-python = ">=3.10"

dependencies = [
    "torch",
    "datasets",
    "tensorboard",
    "numpy",
    "scikit-learn",
    "torchinfo"
]


[tool.setuptools.packages.find]
include = ["torchbase*"]
