[tool.poetry]
name = "torchbase"
version = "0.1.0"
description = "A minimalist base for ML projects in PyTorch"
authors = ["Sohrab Ferdowsi <sohrab.ferdowsi@gmail.com>"]
license = "Apache-2.0"
readme = "README.md"
packages = [{ include = "torchbase" }]

[tool.poetry.dependencies]
python = ">=3.10"
torch = "*"
datasets = "*"
tensorboard = "*"
numpy = "*"
scikit-learn = "*"


[tool.poetry.group.dev.dependencies]
torchvision = "*"
coverage = "^7.6.10"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"